# VeriWipe

./: CMakeLists.txt  README.md
app/cli/: CMakeLists.txt
app/cli/src/: main.cpp
src/core/: CMakeLists.txt
src/core/include/: drive.hpp  wiper.hpp
src/core/src/: drive.cpp  wiper.cpp
src/core/src/windows/: drive.cpp  drive_win.cpp
